--- a/svf-llvm/tools/CMakeLists.txt
+++ b/svf-llvm/tools/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(SABER)
 add_subdirectory(WPA)
 add_subdirectory(Example)
 add_subdirectory(DumpPTGraph)
+add_subdirectory(DumpSVFG)
 add_subdirectory(DDA)
 add_subdirectory(MTA)
 add_subdirectory(CFL)
